# LLVM-Pascal2Assemble

./: .gitignore  README
llvm+ast/install/cmake/: pasrecognizer-config.cmake
llvm+ast/install/include/pasrecognizer/: syntax_tree.h
llvm+ast/pasinterpreter/: CMakeLists.txt
llvm+ast/pasinterpreter/src/: assembly_builder.cpp  assembly_builder.h  gen_fib.cpp  main.cpp  runtime.cpp  runtime.h
llvm+ast/pasinterpreter/src/runtime/: io.c  io.h
llvm+ast/pasinterpreter/test/: test.pas  test2.pas  test3.pas  test4.pas
llvm+ast/pasrecognizer/: CMakeLists.txt  pasrecognizer-config.cmake.in  sim_p.g4
llvm+ast/pasrecognizer/include/pasrecognizer/: error_reporter.h
llvm+ast/pasrecognizer/install/cmake/: pasrecognizer-config.cmake
llvm+ast/pasrecognizer/install/include/pasrecognizer/: error_listener.h  recognizer.h  syntax_tree.h  syntax_tree_builder.h
llvm+ast/pasrecognizer/src/: error_listener.cpp  error_reporter.cpp  recognizer.cpp  syntax_tree.cpp  syntax_tree_builder.cpp
llvm+ast/pasrecognizer/src/antlr4cpp_generated_src/pasLexer/: pasLexer.cpp  pasLexer.h  pasLexer.interp
llvm+ast/pasrecognizer/src/antlr4cpp_generated_src/pasParser/: pasParser.cpp  pasParser.h  pasParser.interp  pasParser.tokens  pasParserBaseListener.cpp  pasParserBaseListener.h  pasParserBaseVisitor.cpp  pasParserBaseVisitor.h  pasParserListener.cpp  pasParserListener.h  pasParserVisitor.cpp  pasParserVisitor.h
llvm+ast/pasrecognizer/test/: main.cpp  syntax_tree_serializer.hpp
llvm+ast/pasrecognizer/test/test_cases/: test (copy).pas  test.pas
